--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ CompArch-hw1/HW1_project/bp_main.o
 CompArch-hw1/HW1_project/bp_main
 CompArch-hw1/HW1_project/bp.o
 CompArch-hw1/HW1_project/example1.trc
+.vscode/c_cpp_properties.json
