Makefile changed for debugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,5 @@
         "xstring": "cpp"
     },
     "cmake.options.statusBarVisibility": "visible",
-    "makefile.makePath": "",
-    "makefile.makefilePath": "CompArch-hw1\\HW1_project\\makefile"
+    "makefile.makefilePath": "CompArch-hw1\\makefile"
 }
