--- a/CompArch-hw1/makefile
+++ b/CompArch-hw1/makefile
@@ -13,29 +13,29 @@ CXXFLAGS = -std=c++11 -Wall
 
 # Automatically detect whether the bp is C or C++
 # Must have either bp.c or bp.cpp - NOT both
-SRC_BP = $(wildcard bp.c bp.cpp)
-SRC_GIVEN = bp_main.c
-EXTRA_DEPS = bp_api.h
+SRC_BP = $(wildcard \CompArch-hw1\bp.c \CompArch-hw1\bp.cpp)
+SRC_GIVEN = .\CompArch-hw1\bp_main.c
+EXTRA_DEPS = .\CompArch-hw1\bp_api.h
 
 OBJ_GIVEN = $(patsubst %.c,%.o,$(SRC_GIVEN))
-OBJ_BP = bp.o
+OBJ_BP = .\CompArch-hw1\bp.o
 OBJ = $(OBJ_GIVEN) $(OBJ_BP)
 
 #$(info OBJ=$(OBJ))
 
 
-ifeq ($(SRC_BP),bp.c)
-bp_main: $(OBJ)
+ifeq ($(SRC_BP),.\CompArch-hw1\bp.c)
+.\CompArch-hw1\bp_main: $(OBJ)
 	$(CC)  -o $@ $(OBJ) -lm
 
-bp.o: bp.c
+.\CompArch-hw1\bp.o: .\CompArch-hw1\bp.c
 	$(CC) -c $(CFLAGS)  -o $@ $^ -lm
 
 else
-bp_main: $(OBJ)
+.\CompArch-hw1\bp_main: $(OBJ)
 	$(CXX) -o $@ $(OBJ)
 
-bp.o: bp.cpp
+.\CompArch-hw1\bp.o: .\CompArch-hw1\bp.cpp
 	$(CXX) -c $(CXXFLAGS)  -o $@ $^ -lm
 endif
 
@@ -45,4 +45,4 @@ $(OBJ_GIVEN): %.o: %.c
 
 .PHONY: clean
 clean:
-	rm -f bp_main $(OBJ)
+	rm -f .\CompArch-hw1\bp_main $(OBJ)
