--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,18 @@
     },
     "cmake.options.statusBarVisibility": "visible",
     "makefile.makefilePath": "makefile",
-
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267",
+            "binaryPath": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267\\bp_main",
+            "binaryArgs": [
+                "input_examples\\example1.trc"
+            ]
+        },
+        {
+            "cwd": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267",
+            "binaryPath": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267\\bp_main",
+            "binaryArgs": []
+        }
     ]
 }
