--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,15 +45,11 @@
     "makefile.launchConfigurations": [
         {
             "cwd": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267",
-            "binaryPath": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267\\bp_main",
+            "binaryPath": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267\\bp_main.exe",
             "binaryArgs": [
                 "input_examples\\example1.trc"
             ]
-        },
-        {
-            "cwd": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267",
-            "binaryPath": "c:\\Users\\gandalf\\Desktop\\computer_arc_046267\\bp_main",
-            "binaryArgs": []
         }
-    ]
+    ],
+    "makefile.makePath": "make"
 }
