--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,463 @@ CompArch-hw1/HW1_project/example1.trc
 bp.o
 bp_main.exe
 bp_main.exe
+input_examples/your_output_example1.out
+input_examples/your_output_example3.out
+tests/your_output_for_example4.out
+tests/your_output_for_example5.out
+tests/your_output_for_example6.out
+tests/your_output_for_example7.out
+tests/your_output_for_example8.out
+tests/your_output_for_example9.out
+tests/your_output_for_example10.out
+tests/your_output_for_example11.out
+tests/your_output_for_example12.out
+tests/your_output_for_example13.out
+tests/your_output_for_example14.out
+tests/your_output_for_example15.out
+tests/your_output_for_example16.out
+tests/your_output_for_example17.out
+tests/your_output_for_example18.out
+tests/your_output_for_example19.out
+tests/your_output_for_example20.out
+tests/your_output_for_example21.out
+tests/your_output_for_example22.out
+tests/your_output_for_example23.out
+tests/your_output_for_example24.out
+tests/your_output_for_example25.out
+tests/your_output_for_example26.out
+tests/your_output_for_example27.out
+tests/your_output_for_example28.out
+tests/your_output_for_example29.out
+tests/your_output_for_example30.out
+tests/your_output_for_example31.out
+tests/your_output_for_example32.out
+tests/your_output_for_example33.out
+tests/your_output_for_example34.out
+tests/your_output_for_example35.out
+tests/your_output_for_example36.out
+tests/your_output_for_example37.out
+tests/your_output_for_example38.out
+tests/your_output_for_example39.out
+tests/your_output_for_example40.out
+tests/your_output_for_example41.out
+tests/your_output_for_example42.out
+tests/your_output_for_example43.out
+tests/your_output_for_example44.out
+tests/your_output_for_example45.out
+tests/your_output_for_example46.out
+tests/your_output_for_example47.out
+tests/your_output_for_example48.out
+tests/your_output_for_example49.out
+tests/your_output_for_example50.out
+tests/your_output_for_example51.out
+tests/your_output_for_example52.out
+tests/your_output_for_example53.out
+tests/your_output_for_example54.out
+tests/your_output_for_example55.out
+tests/your_output_for_example56.out
+tests/your_output_for_example57.out
+tests/your_output_for_example58.out
+tests/your_output_for_example59.out
+tests/your_output_for_example60.out
+tests/your_output_for_example61.out
+tests/your_output_for_example62.out
+tests/your_output_for_example63.out
+tests/your_output_for_example64.out
+tests/your_output_for_example65.out
+tests/your_output_for_example66.out
+tests/your_output_for_example67.out
+tests/your_output_for_example68.out
+tests/your_output_for_example69.out
+tests/your_output_for_example70.out
+tests/your_output_for_example71.out
+tests/your_output_for_example72.out
+tests/your_output_for_example73.out
+tests/your_output_for_example74.out
+tests/your_output_for_example75.out
+tests/your_output_for_example76.out
+tests/your_output_for_example77.out
+tests/your_output_for_example78.out
+tests/your_output_for_example79.out
+tests/your_output_for_example80.out
+tests/your_output_for_example81.out
+tests/your_output_for_example82.out
+tests/your_output_for_example83.out
+tests/your_output_for_example84.out
+tests/your_output_for_example85.out
+tests/your_output_for_example86.out
+tests/your_output_for_example87.out
+tests/your_output_for_example88.out
+tests/your_output_for_example89.out
+tests/your_output_for_example90.out
+tests/your_output_for_example91.out
+tests/your_output_for_example92.out
+tests/your_output_for_example93.out
+tests/your_output_for_example94.out
+tests/your_output_for_example95.out
+tests/your_output_for_example96.out
+tests/your_output_for_example97.out
+tests/your_output_for_example98.out
+tests/your_output_for_example99.out
+tests/your_output_for_example100.out
+tests/your_output_for_example101.out
+tests/your_output_for_example102.out
+tests/your_output_for_example103.out
+tests/your_output_for_example104.out
+tests/your_output_for_example105.out
+tests/your_output_for_example106.out
+tests/your_output_for_example107.out
+tests/your_output_for_example108.out
+tests/your_output_for_example109.out
+tests/your_output_for_example110.out
+tests/your_output_for_example111.out
+tests/your_output_for_example112.out
+tests/your_output_for_example113.out
+tests/your_output_for_example114.out
+tests/your_output_for_example115.out
+tests/your_output_for_example116.out
+tests/your_output_for_example117.out
+tests/your_output_for_example118.out
+tests/your_output_for_example119.out
+tests/your_output_for_example120.out
+tests/your_output_for_example121.out
+tests/your_output_for_example122.out
+tests/your_output_for_example123.out
+tests/your_output_for_example124.out
+tests/your_output_for_example125.out
+tests/your_output_for_example126.out
+tests/your_output_for_example127.out
+tests/your_output_for_example128.out
+tests/your_output_for_example129.out
+tests/your_output_for_example130.out
+tests/your_output_for_example131.out
+tests/your_output_for_example132.out
+tests/your_output_for_example133.out
+tests/your_output_for_example134.out
+tests/your_output_for_example135.out
+tests/your_output_for_example136.out
+tests/your_output_for_example137.out
+tests/your_output_for_example138.out
+tests/your_output_for_example139.out
+tests/your_output_for_example140.out
+tests/your_output_for_example141.out
+tests/your_output_for_example142.out
+tests/your_output_for_example143.out
+tests/your_output_for_example144.out
+tests/your_output_for_example145.out
+tests/your_output_for_example146.out
+tests/your_output_for_example147.out
+tests/your_output_for_example148.out
+tests/your_output_for_example149.out
+tests/your_output_for_n_example4.out
+tests/your_output_for_n_example5.out
+tests/your_output_for_n_example6.out
+tests/your_output_for_n_example7.out
+tests/your_output_for_n_example8.out
+tests/your_output_for_n_example9.out
+tests/your_output_for_n_example10.out
+tests/your_output_for_n_example11.out
+tests/your_output_for_n_example12.out
+tests/your_output_for_n_example13.out
+tests/your_output_for_n_example14.out
+tests/your_output_for_n_example15.out
+tests/your_output_for_n_example16.out
+tests/your_output_for_n_example17.out
+tests/your_output_for_n_example18.out
+tests/your_output_for_n_example19.out
+tests/your_output_for_n_example20.out
+tests/your_output_for_n_example21.out
+tests/your_output_for_n_example22.out
+tests/your_output_for_n_example23.out
+tests/your_output_for_n_example24.out
+tests/your_output_for_n_example25.out
+tests/your_output_for_n_example26.out
+tests/your_output_for_n_example27.out
+tests/your_output_for_n_example28.out
+tests/your_output_for_n_example29.out
+tests/your_output_for_n_example30.out
+tests/your_output_for_n_example31.out
+tests/your_output_for_n_example32.out
+tests/your_output_for_n_example33.out
+tests/your_output_for_n_example34.out
+tests/your_output_for_n_example35.out
+tests/your_output_for_n_example36.out
+tests/your_output_for_n_example37.out
+tests/your_output_for_n_example38.out
+tests/your_output_for_n_example39.out
+tests/your_output_for_n_example40.out
+tests/your_output_for_n_example41.out
+tests/your_output_for_n_example42.out
+tests/your_output_for_n_example43.out
+tests/your_output_for_n_example44.out
+tests/your_output_for_n_example45.out
+tests/your_output_for_n_example46.out
+tests/your_output_for_n_example47.out
+tests/your_output_for_n_example48.out
+tests/your_output_for_n_example49.out
+tests/your_output_for_n_example50.out
+tests/your_output_for_n_example51.out
+tests/your_output_for_n_example52.out
+tests/your_output_for_n_example53.out
+tests/your_output_for_n_example54.out
+tests/your_output_for_n_example55.out
+tests/your_output_for_n_example56.out
+tests/your_output_for_n_example57.out
+tests/your_output_for_n_example58.out
+tests/your_output_for_n_example59.out
+tests/your_output_for_n_example60.out
+tests/your_output_for_n_example61.out
+tests/your_output_for_n_example62.out
+tests/your_output_for_n_example63.out
+tests/your_output_for_n_example64.out
+tests/your_output_for_n_example65.out
+tests/your_output_for_n_example66.out
+tests/your_output_for_n_example67.out
+tests/your_output_for_n_example68.out
+tests/your_output_for_n_example69.out
+tests/your_output_for_n_example70.out
+tests/your_output_for_n_example71.out
+tests/your_output_for_n_example72.out
+tests/your_output_for_n_example73.out
+tests/your_output_for_n_example74.out
+tests/your_output_for_n_example75.out
+tests/your_output_for_n_example76.out
+tests/your_output_for_n_example77.out
+tests/your_output_for_n_example78.out
+tests/your_output_for_n_example79.out
+tests/your_output_for_n_example80.out
+tests/your_output_for_n_example81.out
+tests/your_output_for_n_example82.out
+tests/your_output_for_n_example83.out
+tests/your_output_for_n_example84.out
+tests/your_output_for_n_example85.out
+tests/your_output_for_n_example86.out
+tests/your_output_for_n_example87.out
+tests/your_output_for_n_example88.out
+tests/your_output_for_n_example89.out
+tests/your_output_for_n_example90.out
+tests/your_output_for_n_example91.out
+tests/your_output_for_n_example92.out
+tests/your_output_for_n_example93.out
+tests/your_output_for_n_example94.out
+tests/your_output_for_n_example95.out
+tests/your_output_for_n_example96.out
+tests/your_output_for_n_example97.out
+tests/your_output_for_n_example98.out
+tests/your_output_for_n_example99.out
+tests/your_output_for_n_example100.out
+tests/your_output_for_n_example101.out
+tests/your_output_for_n_example102.out
+tests/your_output_for_n_example103.out
+tests/your_output_for_n_example104.out
+tests/your_output_for_n_example105.out
+tests/your_output_for_n_example106.out
+tests/your_output_for_n_example107.out
+tests/your_output_for_n_example108.out
+tests/your_output_for_n_example109.out
+tests/your_output_for_n_example110.out
+tests/your_output_for_n_example111.out
+tests/your_output_for_n_example112.out
+tests/your_output_for_n_example113.out
+tests/your_output_for_n_example114.out
+tests/your_output_for_n_example115.out
+tests/your_output_for_n_example116.out
+tests/your_output_for_n_example117.out
+tests/your_output_for_n_example118.out
+tests/your_output_for_n_example119.out
+tests/your_output_for_n_example120.out
+tests/your_output_for_n_example121.out
+tests/your_output_for_n_example122.out
+tests/your_output_for_n_example123.out
+tests/your_output_for_n_example124.out
+tests/your_output_for_n_example125.out
+tests/your_output_for_n_example126.out
+tests/your_output_for_n_example127.out
+tests/your_output_for_n_example128.out
+tests/your_output_for_n_example129.out
+tests/your_output_for_n_example130.out
+tests/your_output_for_n_example131.out
+tests/your_output_for_n_example132.out
+tests/your_output_for_n_example133.out
+tests/your_output_for_n_example134.out
+tests/your_output_for_n_example135.out
+tests/your_output_for_n_example136.out
+tests/your_output_for_n_example137.out
+tests/your_output_for_n_example138.out
+tests/your_output_for_n_example139.out
+tests/your_output_for_n_example140.out
+tests/your_output_for_n_example141.out
+tests/your_output_for_n_example142.out
+tests/your_output_for_n_example143.out
+tests/your_output_for_n_example144.out
+tests/your_output_for_n_example145.out
+tests/your_output_for_n_example146.out
+tests/your_output_for_n_example147.out
+tests/your_output_for_n_example148.out
+tests/your_output_for_n_example149.out
+tests/your_output_for_small_btb_example4.out
+tests/your_output_for_small_btb_example5.out
+tests/your_output_for_small_btb_example6.out
+tests/your_output_for_small_btb_example7.out
+tests/your_output_for_small_btb_example8.out
+tests/your_output_for_small_btb_example9.out
+tests/your_output_for_small_btb_example10.out
+tests/your_output_for_small_btb_example11.out
+tests/your_output_for_small_btb_example12.out
+tests/your_output_for_small_btb_example13.out
+tests/your_output_for_small_btb_example14.out
+tests/your_output_for_small_btb_example15.out
+tests/your_output_for_small_btb_example16.out
+tests/your_output_for_small_btb_example17.out
+tests/your_output_for_small_btb_example18.out
+tests/your_output_for_small_btb_example19.out
+tests/your_output_for_small_btb_example20.out
+tests/your_output_for_small_btb_example21.out
+tests/your_output_for_small_btb_example22.out
+tests/your_output_for_small_btb_example23.out
+tests/your_output_for_small_btb_example24.out
+tests/your_output_for_small_btb_example25.out
+tests/your_output_for_small_btb_example26.out
+tests/your_output_for_small_btb_example27.out
+tests/your_output_for_small_btb_example28.out
+tests/your_output_for_small_btb_example29.out
+tests/your_output_for_small_btb_example30.out
+tests/your_output_for_small_btb_example31.out
+tests/your_output_for_small_btb_example32.out
+tests/your_output_for_small_btb_example33.out
+tests/your_output_for_small_btb_example34.out
+tests/your_output_for_small_btb_example35.out
+tests/your_output_for_small_btb_example36.out
+tests/your_output_for_small_btb_example37.out
+tests/your_output_for_small_btb_example38.out
+tests/your_output_for_small_btb_example39.out
+tests/your_output_for_small_btb_example40.out
+tests/your_output_for_small_btb_example41.out
+tests/your_output_for_small_btb_example42.out
+tests/your_output_for_small_btb_example43.out
+tests/your_output_for_small_btb_example44.out
+tests/your_output_for_small_btb_example45.out
+tests/your_output_for_small_btb_example46.out
+tests/your_output_for_small_btb_example47.out
+tests/your_output_for_small_btb_example48.out
+tests/your_output_for_small_btb_example49.out
+tests/your_output_for_small_btb_example50.out
+tests/your_output_for_small_btb_example51.out
+tests/your_output_for_small_btb_example52.out
+tests/your_output_for_small_btb_example53.out
+tests/your_output_for_small_btb_example54.out
+tests/your_output_for_small_btb_example55.out
+tests/your_output_for_small_btb_example56.out
+tests/your_output_for_small_btb_example57.out
+tests/your_output_for_small_btb_example58.out
+tests/your_output_for_small_btb_example59.out
+tests/your_output_for_small_btb_example60.out
+tests/your_output_for_small_btb_example61.out
+tests/your_output_for_small_btb_example62.out
+tests/your_output_for_small_btb_example63.out
+tests/your_output_for_small_btb_example64.out
+tests/your_output_for_small_btb_example65.out
+tests/your_output_for_small_btb_example66.out
+tests/your_output_for_small_btb_example67.out
+tests/your_output_for_small_btb_example68.out
+tests/your_output_for_small_btb_example69.out
+tests/your_output_for_small_btb_example70.out
+tests/your_output_for_small_btb_example71.out
+tests/your_output_for_small_btb_example72.out
+tests/your_output_for_small_btb_example73.out
+tests/your_output_for_small_btb_example74.out
+tests/your_output_for_small_btb_example75.out
+tests/your_output_for_small_btb_example76.out
+tests/your_output_for_small_btb_example77.out
+tests/your_output_for_small_btb_example78.out
+tests/your_output_for_small_btb_example79.out
+tests/your_output_for_small_btb_example80.out
+tests/your_output_for_small_btb_example81.out
+tests/your_output_for_small_btb_example82.out
+tests/your_output_for_small_btb_example83.out
+tests/your_output_for_small_btb_example84.out
+tests/your_output_for_small_btb_example85.out
+tests/your_output_for_small_btb_example86.out
+tests/your_output_for_small_btb_example87.out
+tests/your_output_for_small_btb_example88.out
+tests/your_output_for_small_btb_example89.out
+tests/your_output_for_small_btb_example90.out
+tests/your_output_for_small_btb_example91.out
+tests/your_output_for_small_btb_example92.out
+tests/your_output_for_small_btb_example93.out
+tests/your_output_for_small_btb_example94.out
+tests/your_output_for_small_btb_example95.out
+tests/your_output_for_small_btb_example96.out
+tests/your_output_for_small_btb_example97.out
+tests/your_output_for_small_btb_example98.out
+tests/your_output_for_small_btb_example99.out
+tests/your_output_for_small_btb_example100.out
+tests/your_output_for_small_btb_example101.out
+tests/your_output_for_small_btb_example102.out
+tests/your_output_for_small_btb_example103.out
+tests/your_output_for_small_btb_example104.out
+tests/your_output_for_small_btb_example105.out
+tests/your_output_for_small_btb_example106.out
+tests/your_output_for_small_btb_example107.out
+tests/your_output_for_small_btb_example108.out
+tests/your_output_for_small_btb_example109.out
+tests/your_output_for_small_btb_example110.out
+tests/your_output_for_small_btb_example111.out
+tests/your_output_for_small_btb_example112.out
+tests/your_output_for_small_btb_example113.out
+tests/your_output_for_small_btb_example114.out
+tests/your_output_for_small_btb_example115.out
+tests/your_output_for_small_btb_example116.out
+tests/your_output_for_small_btb_example117.out
+tests/your_output_for_small_btb_example118.out
+tests/your_output_for_small_btb_example119.out
+tests/your_output_for_small_btb_example120.out
+tests/your_output_for_small_btb_example121.out
+tests/your_output_for_small_btb_example122.out
+tests/your_output_for_small_btb_example123.out
+tests/your_output_for_small_btb_example124.out
+tests/your_output_for_small_btb_example125.out
+tests/your_output_for_small_btb_example126.out
+tests/your_output_for_small_btb_example127.out
+tests/your_output_for_small_btb_example128.out
+tests/your_output_for_small_btb_example129.out
+tests/your_output_for_small_btb_example130.out
+tests/your_output_for_small_btb_example131.out
+tests/your_output_for_small_btb_example132.out
+tests/your_output_for_small_btb_example133.out
+tests/your_output_for_small_btb_example134.out
+tests/your_output_for_small_btb_example135.out
+tests/your_output_for_small_btb_example136.out
+tests/your_output_for_small_btb_example137.out
+tests/your_output_for_small_btb_example138.out
+tests/your_output_for_small_btb_example139.out
+tests/your_output_for_small_btb_example140.out
+tests/your_output_for_small_btb_example141.out
+tests/your_output_for_small_btb_example142.out
+tests/your_output_for_small_btb_example143.out
+tests/your_output_for_small_btb_example144.out
+tests/your_output_for_small_btb_example145.out
+tests/your_output_for_small_btb_example146.out
+tests/your_output_for_small_btb_example147.out
+tests/your_output_for_small_btb_example148.out
+tests/your_output_for_small_btb_example149.out
+tests/segel/your_segel_example1.out
+tests/segel/your_segel_example2.out
+tests/segel/your_segel_example3.out
+tests/segel/your_segel_example4.out
+tests/segel/your_segel_example5.out
+tests/segel/your_segel_example6.out
+tests/segel/your_segel_example7.out
+tests/segel/your_segel_example8.out
+tests/segel/your_segel_example9.out
+tests/segel/your_segel_example10.out
+tests/segel/your_segel_example11.out
+tests/segel/your_segel_example12.out
+tests/segel/your_segel_example13.out
+tests/segel/your_segel_example14.out
+tests/segel/your_segel_example15.out
+tests/segel/your_segel_example16.out
+tests/segel/your_segel_example17.out
+tests/segel/your_segel_example18.out
+tests/segel/your_segel_example19.out
+tests/segel/your_segel_example20.out
