--- a/.gitignore
+++ b/.gitignore
@@ -928,3 +928,63 @@ tests/segel/your_segel_example19.out
 tests/segel/your_segel_example20.out
 bp.o
 bp_main
+tests/your_output_for_example5.out
+tests/your_output_for_example15.out
+tests/your_output_for_example16.out
+tests/your_output_for_example22.out
+tests/your_output_for_example28.out
+tests/your_output_for_example33.out
+tests/your_output_for_example46.out
+tests/your_output_for_example58.out
+tests/your_output_for_example65.out
+tests/your_output_for_example71.out
+tests/your_output_for_example76.out
+tests/your_output_for_example80.out
+tests/your_output_for_example86.out
+tests/your_output_for_example97.out
+tests/your_output_for_example104.out
+tests/your_output_for_example111.out
+tests/your_output_for_example112.out
+tests/your_output_for_example121.out
+tests/your_output_for_example125.out
+tests/your_output_for_example135.out
+tests/your_output_for_example137.out
+tests/your_output_for_example143.out
+tests/your_output_for_n_example33.out
+tests/your_output_for_n_example35.out
+tests/your_output_for_n_example37.out
+tests/your_output_for_n_example38.out
+tests/your_output_for_n_example39.out
+tests/your_output_for_n_example40.out
+tests/your_output_for_n_example43.out
+tests/your_output_for_n_example46.out
+tests/your_output_for_n_example49.out
+tests/your_output_for_n_example57.out
+tests/your_output_for_n_example59.out
+tests/your_output_for_n_example62.out
+tests/your_output_for_n_example66.out
+tests/your_output_for_n_example71.out
+tests/your_output_for_n_example72.out
+tests/your_output_for_n_example78.out
+tests/your_output_for_n_example87.out
+tests/your_output_for_n_example89.out
+tests/your_output_for_n_example94.out
+tests/your_output_for_n_example97.out
+tests/your_output_for_n_example113.out
+tests/your_output_for_n_example115.out
+tests/your_output_for_n_example125.out
+tests/your_output_for_n_example131.out
+tests/your_output_for_n_example138.out
+tests/your_output_for_n_example141.out
+tests/your_output_for_n_example142.out
+tests/your_output_for_n_example144.out
+tests/your_output_for_small_btb_example7.out
+tests/your_output_for_small_btb_example20.out
+tests/your_output_for_small_btb_example25.out
+tests/your_output_for_small_btb_example27.out
+tests/your_output_for_small_btb_example32.out
+tests/your_output_for_small_btb_example54.out
+tests/your_output_for_small_btb_example77.out
+tests/your_output_for_small_btb_example84.out
+tests/your_output_for_small_btb_example93.out
+tests/your_output_for_small_btb_example102.out
