--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,6 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp"
-    }
+    },
+    "makefile.makefilePath": "C:\\Users\\gandalf\\Desktop\\computer_arc_046267\\HW_4\\makefile"
 }
